[package]
name = "axum_to_do_list"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
bcrypt = "0.16.0"
derive = "1.0.0"
dotenvy = "0.15.7"
duckdb = "1.1.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
