[package]
name = "axum_to_do_list"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
bcrypt = "0.16.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
duckdb = "1.1.1"
hyper = { version = "1.5.2", features = ["full"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
